refactoring: update admin's code
