# gf-webapp-admin/src/model/room.ts
@@ -1,15 +1,15 @@
 export interface IRoom {
-  apartmentsType?: string,
-  description?: string,
-  descriptionLong?: string,
+  apartmentsType: string,
+  description: string,
+  descriptionLong: string,
   id?: string,
-  price?: number,
-  square?: number,
-  adults?: number,
-  promo?: string,
-  rating?: number
-  services?: string,
-  slider?: string[],
+  price: number,
+  square: number,
+  adults: number,
+  promo: string,
+  rating: number
+  services: string,
+  slider: string[],
 }
 
 export type RoomType = {
@@ -18,17 +18,4 @@ export type RoomType = {
 
 export type RoomsType = {
   rooms:IRoom[]
-}
-
-export interface IAddRoom {
-  apartmentsType: string,
-  description: string,
-  descriptionLong: string,
-  price: number,
-  square: number,
-  adults: number,
-  promo: string,
-  rating: number
-  services: string,
-  slider: string[],
 }
